# OCEAN_Firasa

./: .env.example  .gitignore  AI_REPORT_FEATURE.md  API_CONTRACT.md  API_DOCUMENTATION.md  ARCHITECTURE.md  Dockerfile  README.md  SETUP_AI_REPORT.md  TESTING.md  docker-compose.prod.yml  predict_personality.py  pyproject.toml  render.yaml  requirements.txt  requirements_ai_agent.txt  run_server.py
aws/: DEPLOY.md  user-data.sh
docker/: Dockerfile  docker-compose.yml  nginx.conf
output/diagnostics/: train_single_image_annotations_CLEANED_issues_combined.csv
output/single_img_resnet18/: test_predictions.csv
output/test_results/: test_predictions.csv
requirements/: base.txt  dev.txt  prod.txt
scripts/: predict_cli.py  start.sh
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/middleware/: error_handler.py  logging.py  rate_limit.py
src/api/routes/: batch.py  chat.py  debug.py  health.py  predict.py  stream.py  (+1 more)
src/core/: face_detector.py  personality_predictor.py  reference_norms.py  video_predictor.py  video_processor.py
src/infrastructure/: cache.py  database.py  storage.py
src/services/: __init__.py  ai_agent_service.py  audio_analysis_service.py  cultural_fit_service.py  cv_parser_service.py  derived_metrics_service.py  interpretation_service.py  job_search_service.py  llm_provider.py  model_manager.py  multimodal_service.py  prediction_service.py  preprocessing_service.py  report_service.py
src/utils/: config.py  exceptions.py  logger.py
static/: coming-soon.html  index.html
static/css/: style.css
static/js/: app.js
(+6 files in other folders)
